cabal-version: 3.0

name:           warp-grpc-example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/warp-grpc-example#readme>
homepage:       https://github.com/githubuser/warp-grpc-example#readme
bug-reports:    https://github.com/githubuser/warp-grpc-example/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/warp-grpc-example

common deps
  build-depends:
    , base >= 4.7 && < 5
    , bytestring
    , containers
    , data-default-class
    , http2-grpc-types >= 0.3
    , lens
    , proto-lens >= 0.4
    , proto-lens-runtime >= 0.4
    , warp
    , warp-grpc >= 0.1.0.3
    , warp-tls

common lang
  ghc-options: -threaded
  default-language: Haskell2010

library
  import: deps, lang
  exposed-modules:
      Lib
      Proto.Protos.Grpcbin
      Proto.Protos.Grpcbin_Fields
  other-modules:
      Paths_warp_grpc_example
  hs-source-dirs:
      src
      gen

executable warp-grpc-example
  import: deps, lang
  main-is: Main.hs
  other-modules:
      Paths_warp_grpc_example
  hs-source-dirs:
      app
  build-depends: warp-grpc-example
  ghc-options: -rtsopts -with-rtsopts=-N

test-suite warp-grpc-example-test
  import: deps, lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_warp_grpc_example
  hs-source-dirs:
      test
  build-depends: warp-grpc-example
